--- a/css/vacancies.css
+++ b/css/vacancies.css
@@ -798,6 +798,14 @@ body {
   margin-top: 4em;
   margin-bottom: 4em; }
 
+.publication__date {
+  font-family: 'ProximaNova', sans-serif;
+  font-size: 1.3em;
+  font-weight: 400;
+  color: #1b417b;
+  letter-spacing: 0em;
+  margin-bottom: 1em; }
+
 .publication__head {
   font-family: 'Bodoni', serif;
   font-size: 2.1em;
@@ -845,7 +853,8 @@ body {
 
 .publication__head,
 .publication__txt,
-.publication__detailsBtn {
+.publication__detailsBtn,
+.publication__date {
   margin-left: calc(100% / 7);
   margin-right: calc(100% / 7); }
 
@@ -859,7 +868,8 @@ body {
     .publication__head:before {
       left: calc(-1em - 0.35em); }
   .publication__txt,
-  .publication__detailsBtn {
+  .publication__detailsBtn,
+  .publication__date {
     margin-left: 0;
     margin-right: 0; } }
 
