--- a/scss/_publications-list.scss
+++ b/scss/_publications-list.scss
@@ -36,6 +36,14 @@
 	margin-top: 4em;
 	margin-bottom: 4em;
 }
+.publication__date {
+	font-family: 'ProximaNova', sans-serif;
+	font-size: 1.3em;
+	font-weight: 400;
+	color: $blu;
+	letter-spacing: 0em;
+	margin-bottom: 1em;
+}
 .publication__head {
 	font-family: 'Bodoni', serif;
 	font-size: 2.1em;
@@ -82,7 +90,8 @@
 }
 .publication__head,
 .publication__txt,
-.publication__detailsBtn {
+.publication__detailsBtn,
+.publication__date {
 	margin-left: calc(100% / 7);
 	margin-right: calc(100% / 7);
 }
@@ -99,7 +108,8 @@
 		}
 	}
 	.publication__txt,
-	.publication__detailsBtn {
+	.publication__detailsBtn,
+	.publication__date {
 		margin-left: 0;
 		margin-right: 0;
 	}
